--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -32,7 +32,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
 
-        <example.com.mvpexample.view.TextViewPlus
+        <com.example.mvpexample.view.TextViewPlus
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/nameTextView"
