--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,63 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp" >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/moviePosterImageView"
-        tools:src="@mipmap/ic_launcher"
-        android:layout_centerVertical="true"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:contentDescription="@string/app_name"/>
+    <data>
+        <import type="android.view.View"/>
+        <variable name="movieViewInfo" type="com.example.mvvmreactive.model.MovieViewInfo"/>
+    </data>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/highRatingImageView"
-        android:src="@drawable/yellow_star"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/app_name"
-        android:visibility="gone"/>
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/moviePosterImageView"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp">
+        <ImageView
+            android:id="@+id/moviePosterImageView"
+            tools:src="@mipmap/ic_launcher"
+            android:layout_centerVertical="true"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:contentDescription="@string/app_name"/>
 
-        <com.example.mvvmreactive.view.TextViewPlus
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/nameTextView"
-            style="@style/CustomStyle"
-            tools:text="Movie Title"
-            />
+            android:id="@+id/highRatingImageView"
+            android:src="@drawable/yellow_star"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:contentDescription="@string/app_name"
+            android:visibility="@{movieViewInfo.highRating ? View.VISIBLE : View.GONE}"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/moviePosterImageView"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
+
+            <com.example.mvvmreactive.view.TextViewPlus
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/nameTextView"
+                style="@style/CustomStyle"
+                tools:text="Movie Title"
+                android:text="@{movieViewInfo.title}"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="2dp"
+                android:id="@+id/releaseDateTextView"
+                style="@style/Text.DateStyle"
+                tools:text="9/11/2013"
+                android:text="@{movieViewInfo.releaseDate}"
+                />
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="2dp"
-            android:id="@+id/releaseDateTextView"
-            style="@style/Text.DateStyle"
-            tools:text="9/11/2013"
-            />
+            android:id="@+id/ratingTextView"
+            android:textAppearance="@style/Text.RatingStyle"
+            tools:text="7/10"
+            android:text="@{movieViewInfo.rating}"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"/>
 
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ratingTextView"
-        android:textAppearance="@style/Text.RatingStyle"
-        tools:text="7/10"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
-
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
