--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -44,6 +44,6 @@
             android:id="@+id/progressBar"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:visibility="@{viewModel.firstLoad ? View.VISIBLE : View.GONE}"/>
+            android:visibility="visible"/>
     </RelativeLayout>
 </layout>
