Added the drop down spinner to toolbar. Reorganized the UiModel to use a Builder.

--- a/app/src/main/res/layout/filter_item.xml
+++ b/app/src/main/res/layout/filter_item.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/filterTextView"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
+        android:textSize="20sp"
         android:textColor="@android:color/black"
         android:layout_toEndOf="@id/filterImageView"
         android:layout_centerVertical="true"
